fix(ui): Filters - overflow if there more than 20 items

--- a/packages/ui/src/ui/filters/filters.module.css
+++ b/packages/ui/src/ui/filters/filters.module.css
@@ -73,6 +73,11 @@
 }
 
 /** Filter group variation */
+.filterGroupItems {
+  max-height: calc(20 * (var(--size-small) + 2 * var(--space-xxxsmall)));
+  overflow: auto;
+}
+
 .filterGroupActions {
   margin-top: var(--space-xxxsmall);
   padding-top: var(--space-xxxsmall);
